--- a/INTITA/Modules/OpportunitiesScreen/Cells/OpportunitiesTableViewCell.xib
+++ b/INTITA/Modules/OpportunitiesScreen/Cells/OpportunitiesTableViewCell.xib
@@ -12,10 +12,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="OpportunitiesTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="319" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="319" height="135"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="319" height="120"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="319" height="135"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7dU-Ic-wFf">
@@ -26,18 +26,18 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygo-Wv-LiH">
-                        <rect key="frame" x="20" y="21" width="279" height="25"/>
+                        <rect key="frame" x="20" y="24" width="279" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="25" id="gML-YY-lHy"/>
+                            <constraint firstAttribute="height" constant="20" id="gML-YY-lHy"/>
                         </constraints>
                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukc-NZ-V3P">
-                        <rect key="frame" x="50" y="61" width="249" height="17"/>
+                        <rect key="frame" x="50" y="61" width="249" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="17" id="cod-bS-bAZ"/>
+                            <constraint firstAttribute="height" constant="20" id="cod-bS-bAZ"/>
                         </constraints>
                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
                         <state key="normal" title="Button">
@@ -45,47 +45,51 @@
                         </state>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hqF-bW-l0v">
-                        <rect key="frame" x="50" y="89" width="249" height="1"/>
+                        <rect key="frame" x="50" y="87" width="249" height="1"/>
                         <color key="backgroundColor" name="mainColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="jwT-wz-Nst"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jtw-jn-igU">
-                        <rect key="frame" x="20" y="50" width="279" height="1"/>
+                        <rect key="frame" x="20" y="48" width="279" height="1"/>
                         <color key="backgroundColor" name="mainColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="Ngc-Nw-GYS"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zgt-zz-W9t">
-                        <rect key="frame" x="20" y="4" width="279" height="17"/>
+                        <rect key="frame" x="20" y="4" width="279" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="17" id="u1B-Eh-jeh"/>
+                            <constraint firstAttribute="height" constant="20" id="u1B-Eh-jeh"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EiE-BS-c4u">
-                        <rect key="frame" x="150.5" y="45" width="18.5" height="22"/>
-                        <state key="normal" image="chevron.down" catalog="system"/>
-                        <connections>
-                            <action selector="downButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="6Xs-Ct-HkQ"/>
-                        </connections>
-                    </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rd3-AU-KsY">
-                        <rect key="frame" x="50" y="97" width="249" height="17"/>
+                        <rect key="frame" x="50" y="96" width="249" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="17" id="Y0Q-dh-8e5"/>
+                            <constraint firstAttribute="height" constant="20" id="Y0Q-dh-8e5"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <state key="normal" title="Button">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                     </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EiE-BS-c4u">
+                        <rect key="frame" x="127.5" y="48" width="64" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="64" id="I6G-w3-scF"/>
+                        </constraints>
+                        <state key="normal" image="chevron.down" catalog="system"/>
+                        <connections>
+                            <action selector="downButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="6Xs-Ct-HkQ"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="EiE-BS-c4u" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="48" id="4YC-md-2Xa"/>
                     <constraint firstItem="zgt-zz-W9t" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="8bJ-ay-LKb"/>
                     <constraint firstItem="hqF-bW-l0v" firstAttribute="top" secondItem="jtw-jn-igU" secondAttribute="bottom" constant="38" id="9En-qp-1Du"/>
                     <constraint firstAttribute="trailing" secondItem="hqF-bW-l0v" secondAttribute="trailing" constant="20" id="9QY-kZ-kDw"/>
@@ -95,26 +99,25 @@
                     <constraint firstItem="7dU-Ic-wFf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="H8t-Zi-9Q1"/>
                     <constraint firstItem="jtw-jn-igU" firstAttribute="top" secondItem="ygo-Wv-LiH" secondAttribute="bottom" constant="4" id="MEa-2H-RpI"/>
                     <constraint firstAttribute="trailing" secondItem="7dU-Ic-wFf" secondAttribute="trailing" id="eID-jg-9il"/>
-                    <constraint firstItem="EiE-BS-c4u" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="fxg-2A-lpZ"/>
                     <constraint firstItem="zgt-zz-W9t" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="g2o-3n-cWt"/>
                     <constraint firstAttribute="trailing" secondItem="Rd3-AU-KsY" secondAttribute="trailing" constant="20" id="gHA-eb-eBf"/>
-                    <constraint firstAttribute="bottom" secondItem="EiE-BS-c4u" secondAttribute="bottom" constant="53" id="gLU-Cd-hdZ"/>
+                    <constraint firstItem="EiE-BS-c4u" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="iG9-0n-8QC"/>
                     <constraint firstItem="Rd3-AU-KsY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="jMx-AO-sLz"/>
                     <constraint firstAttribute="trailing" secondItem="ygo-Wv-LiH" secondAttribute="trailing" constant="20" id="jRH-Nz-nB4"/>
                     <constraint firstItem="ukc-NZ-V3P" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="lZ7-un-AlA"/>
                     <constraint firstItem="hqF-bW-l0v" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="obB-qd-vGF"/>
                     <constraint firstItem="jtw-jn-igU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="p3K-vO-jz3"/>
                     <constraint firstItem="ygo-Wv-LiH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="qpJ-Ph-AZe"/>
-                    <constraint firstItem="ukc-NZ-V3P" firstAttribute="top" secondItem="jtw-jn-igU" secondAttribute="bottom" constant="10" id="qsN-2k-h0i"/>
+                    <constraint firstItem="ukc-NZ-V3P" firstAttribute="top" secondItem="jtw-jn-igU" secondAttribute="bottom" constant="12" id="qsN-2k-h0i"/>
                     <constraint firstAttribute="trailing" secondItem="zgt-zz-W9t" secondAttribute="trailing" constant="20" id="sGi-hu-AXT"/>
                     <constraint firstAttribute="bottom" secondItem="7dU-Ic-wFf" secondAttribute="bottom" id="tI9-oG-0yX"/>
-                    <constraint firstItem="Rd3-AU-KsY" firstAttribute="top" secondItem="hqF-bW-l0v" secondAttribute="bottom" constant="7" id="tmO-vy-S3k"/>
+                    <constraint firstItem="Rd3-AU-KsY" firstAttribute="top" secondItem="hqF-bW-l0v" secondAttribute="bottom" constant="8" id="tmO-vy-S3k"/>
                     <constraint firstItem="ygo-Wv-LiH" firstAttribute="top" secondItem="zgt-zz-W9t" secondAttribute="bottom" id="wsj-Hy-CCj"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="downBtnConstraint" destination="gLU-Cd-hdZ" id="1rh-kt-yOA"/>
+                <outlet property="downBtnConstraint" destination="zgt-zz-W9t" id="E0y-dh-dPk"/>
                 <outlet property="downButton" destination="EiE-BS-c4u" id="wEZ-G7-ren"/>
                 <outlet property="financeButton" destination="Rd3-AU-KsY" id="rVX-cK-uJe"/>
                 <outlet property="firstLineView" destination="jtw-jn-igU" id="XHC-GJ-LsY"/>
@@ -125,7 +128,7 @@
                 <outlet property="secondLineView" destination="hqF-bW-l0v" id="1v0-Cc-m00"/>
                 <outlet property="taskButton" destination="ukc-NZ-V3P" id="tbX-L9-fJN"/>
             </connections>
-            <point key="canvasLocation" x="3.6231884057971016" y="1.3392857142857142"/>
+            <point key="canvasLocation" x="3.6231884057971016" y="1.0044642857142856"/>
         </tableViewCell>
     </objects>
     <resources>
