--- a/INTITA/Modules/ProfileSettings/Cells/HeaderSettingsTableViewCell.xib
+++ b/INTITA/Modules/ProfileSettings/Cells/HeaderSettingsTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="qpw-P1-R1X" customClass="HeaderSettingsTableViewCell" customModule="INTITA">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="qpw-P1-R1X" customClass="HeaderSettingsTableViewCell" customModule="INTITA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qpw-P1-R1X" id="4NX-Y6-bfv">
