--- a/INTITA/Modules/OpportunitiesScreen/Cells/OpportunitiesTableViewCell.xib
+++ b/INTITA/Modules/OpportunitiesScreen/Cells/OpportunitiesTableViewCell.xib
@@ -26,7 +26,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="u1B-Eh-jeh"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
